Changing code to adapt to selenium 4 with new Appium version, step 1