@@ -6,7 +6,6 @@ import framework.base.Utils.MovementsV;
 import framework.report.Log;
 import framework.test.TestUtils;
 import io.appium.java_client.AppiumDriver;
-import io.appium.java_client.MobileElement;
 import io.appium.java_client.TouchAction;
 import io.appium.java_client.android.AndroidDriver;
 import io.appium.java_client.android.nativekey.AndroidKey;
@@ -27,6 +26,7 @@ import org.openqa.selenium.support.ui.FluentWait;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.time.Duration;
@@ -46,13 +46,13 @@ import java.util.stream.Collectors;
 public class AppiumDriverFacade {
 
 	/** The appium driver. */
-	public static ThreadLocal<AppiumDriver<MobileElement>> appiumDriver = new ThreadLocal<AppiumDriver<MobileElement>>();
+	public static ThreadLocal<AppiumDriver> appiumDriver = new ThreadLocal<>();
 
 	/** The Constant pageTimeOut. */
 	public static final int pageTimeOut = Integer.valueOf(FrameworkProperties.getTimeout()).intValue();
 	
 	/** The is android execution. */
-	private static ThreadLocal<Boolean> isAndroidExecution = new ThreadLocal<Boolean>() ;
+	private static final ThreadLocal<Boolean> isAndroidExecution = new ThreadLocal<>();
 	
 	/** The Constant APPIUM_EUROPE. */
 	private static final String APPIUM_EUROPE =  "https://eu1.appium.testobject.com/wd/hub";
@@ -76,7 +76,7 @@ public class AppiumDriverFacade {
      *
      * @param driver the new driver
      */
-    public static void setDriver(AppiumDriver<MobileElement> driver) {
+	public static void setDriver(AppiumDriver driver) {
     	appiumDriver.set(driver);
     }
 
@@ -94,8 +94,9 @@ public class AppiumDriverFacade {
 	 */
 	public static void createDriverFromProperties(String name, String deviceName, String platformVersion) throws IOException, URISyntaxException {
 		createDriver(name,deviceName,platformVersion, FrameworkProperties.getBrowser().isEmpty() ? null :  FrameworkProperties.getBrowser(),
-				 FrameworkProperties.getBrowserVersion().isEmpty() ? null :  FrameworkProperties.getBrowserVersion(), 
-			     FrameworkProperties.getOS().isEmpty() ? null :  FrameworkProperties.getOS());	
+				 FrameworkProperties.getBrowserVersion().isEmpty() ? null :  FrameworkProperties.getBrowserVersion(),
+				FrameworkProperties.getOS().isEmpty() ? null : FrameworkProperties.getOS(),
+				FrameworkProperties.getAppActivity().isEmpty() ? null : FrameworkProperties.getAppActivity());
 	}
 
 	/**
@@ -115,7 +116,7 @@ public class AppiumDriverFacade {
 			createDriverFromProperties(name, deviceName, platformVersion);
 		}
 		else {
-		createDriver(name,deviceName,platformVersion, null, null, null);
+			createDriver(name, deviceName, platformVersion, null, null, null, null);
 		}
 	}
 	
@@ -135,12 +136,12 @@ public class AppiumDriverFacade {
 	 * @throws IOException Signals that an I/O exception has occurred.
 	 * @throws URISyntaxException the URI syntax exception
 	 */
-	public static void createDriver(String name, String deviceName, String platformVersion, String browser, String version, String os) throws IOException, URISyntaxException {
-		URL url = null;
+	public static void createDriver(String name, String deviceName, String platformVersion, String browser, String version, String os, String appActivity) throws IOException, URISyntaxException {
+		URL url;
 		MutableCapabilities capabilities = new DesiredCapabilities();
-		browser = browser != null ? TestUtils.toTitle(browser.toString()) : null;
+		browser = browser != null ? TestUtils.toTitle(browser) : null;
 		if (FrameworkProperties.getLocal().equalsIgnoreCase("true")) {
-			url = localDriverInitialization(capabilities,  browser, version, os);
+			url = localDriverInitialization(capabilities, browser, version, os, appActivity);
 		} else {
 			url = remoteDriverInitialization(capabilities, name, browser, version, os);
 		}
@@ -168,13 +169,11 @@ public class AppiumDriverFacade {
 	 * @return the url
 	 * @throws MalformedURLException the malformed URL exception
 	 */
-	public static URL localDriverInitialization(MutableCapabilities capabilities, String browser, String version, String os) throws MalformedURLException{
+	public static URL localDriverInitialization(MutableCapabilities capabilities, String browser, String version, String os, String appActivity) throws MalformedURLException {
 		if (FrameworkProperties.getPlatformName().equalsIgnoreCase("Android")) {
 			if(browser == null) {
 			capabilities.setCapability("appPackage", FrameworkProperties.getPackage());
-			capabilities.setCapability("appActivity",
-					FrameworkProperties.getApp().equals("SMS") ? "com.google.android.apps.messaging.home.HomeActivity" :
-						"es.lacaixa.mobile.appcbk.features.splash.view.SplashActivity");
+				capabilities.setCapability("appActivity", appActivity);
 			}
 		} else {
 			capabilities.setCapability("startIWDP", true);
@@ -219,7 +218,7 @@ public class AppiumDriverFacade {
 			return testName.contains("EU") ? new URL(APPIUM_EUROPE) : new URL(APPIUM_US);
 		} else {
 			capabilities.setCapability("testobject_test_name",testName.contains("_") ? testName.substring(0, testName.indexOf("_")) : testName);
-			return new URL(APPIUM_EUROPE);
+			return URI.create(APPIUM_EUROPE).toURL();
 		}
 	}
 	
@@ -253,8 +252,8 @@ public class AppiumDriverFacade {
 	 * @throws URISyntaxException the URI syntax exception
 	 */
 	public static void deviceDriverInitialization(MutableCapabilities capabilities, String deviceName, String platformVersion) throws IOException, URISyntaxException{
-		if(FrameworkProperties.getLocal().equalsIgnoreCase("False") && FrameworkProperties.getPlatformName().toUpperCase().equals("ANDROID") && deviceName.equalsIgnoreCase("Dynamic") && !System.getProperties().containsKey("allDevices")) {
-			capabilities.setCapability("deviceName", TestUtils.geAvailableAndroidDeviceFromSauceLabs(Boolean.valueOf(FrameworkProperties.getHuawei()), Boolean.valueOf(FrameworkProperties.getHuaweiHms())));
+		if (FrameworkProperties.getLocal().equalsIgnoreCase("False") && FrameworkProperties.getPlatformName().equalsIgnoreCase("ANDROID") && deviceName.equalsIgnoreCase("Dynamic") && !System.getProperties().containsKey("allDevices")) {
+			capabilities.setCapability("deviceName", TestUtils.geAvailableAndroidDeviceFromSauceLabs(Boolean.parseBoolean(FrameworkProperties.getHuawei()), Boolean.parseBoolean(FrameworkProperties.getHuaweiHms())));
 		}
 		if (!deviceName.equalsIgnoreCase("Dynamic")) {
 			capabilities.setCapability("deviceName", deviceName);
@@ -288,7 +287,7 @@ public class AppiumDriverFacade {
 		capabilities.setCapability("simpleIsVisibleCheck", true);
 		//capabilities.setCapability("noReset", false);
 		capabilities.setCapability("bundleId", FrameworkProperties.getPackage());
-		appiumDriver.set(new IOSDriver<MobileElement>(url, capabilities));
+		appiumDriver.set(new IOSDriver(url, capabilities));
 		isAndroidExecution.set(false);
 	}
 
@@ -298,7 +297,7 @@ public class AppiumDriverFacade {
 	 * @return true, if is android execution
 	 */
 	public static boolean isAndroidExecution() {
-		return isAndroidExecution.get().booleanValue();
+		return isAndroidExecution.get();
 	}
 	
 	/**
@@ -329,7 +328,7 @@ public class AppiumDriverFacade {
 		if (FrameworkProperties.getWeb().equalsIgnoreCase("True")) {
 			WebDriverFacade.createDriverForMobileWeb(url, capabilities);
 		} else {
-			appiumDriver.set(new AndroidDriver<MobileElement>(url, capabilities));
+			appiumDriver.set(new AndroidDriver(url, capabilities));
 		}
 		isAndroidExecution.set(true);
 	}
@@ -352,7 +351,7 @@ public class AppiumDriverFacade {
 	 * @author carlos.cadena
 	 * @param elements the elements
 	 */
-	public static void waitForAllElementsVisibility(List<MobileElement> elements) {
+	public static void waitForAllElementsVisibility(List<WebElement> elements) {
 		waitForAllElementsVisibility(elements, pageTimeOut);
 	}
 	
@@ -363,7 +362,7 @@ public class AppiumDriverFacade {
 	 * @param elements the elements
 	 * @param timeOut the time out
 	 */
-	public static void waitForAllElementsVisibility(List<? extends WebElement> elements, int timeOut) {
+	public static void waitForAllElementsVisibility(List<WebElement> elements, int timeOut) {
 		Utils.waitForAllElementsVisibility(appiumDriver.get(), elements, timeOut);
 	}
 
@@ -399,7 +398,7 @@ public class AppiumDriverFacade {
 	 * @author carlos.cadena
 	 * @param element the element
 	 */
-	public static void waitForElementVisibility(MobileElement element) {
+	public static void waitForElementVisibility(WebElement element) {
 		waitForElementVisibility(element, pageTimeOut);
 	}
 
@@ -410,7 +409,7 @@ public class AppiumDriverFacade {
 	 * @param element the element
 	 * @param timeOut the time out
 	 */
-	public static void waitForElementVisibility(MobileElement element, int timeOut) {
+	public static void waitForElementVisibility(WebElement element, int timeOut) {
 		if (isAndroidExecution()) {
 			Utils.waitForElementVisibility(appiumDriver.get(), element, timeOut);
 		} else {
@@ -426,7 +425,7 @@ public class AppiumDriverFacade {
 	 * @param locator the locator
 	 * @param timeOut the time out
 	 */
-	public static void waitForElementVisibility(MobileElement element, By locator, int timeOut) {
+	public static void waitForElementVisibility(WebElement element, By locator, int timeOut) {
 		if (isAndroidExecution()) {
 			Utils.waitForElementVisibility(element, locator, timeOut);
 		} else {
@@ -442,7 +441,7 @@ public class AppiumDriverFacade {
 	 * @param locator the locator
 	 * @param timeOut the time out
 	 */
-	public static void waitForElementPresence(MobileElement element, By locator, int timeOut) {
+	public static void waitForElementPresence(WebElement element, By locator, int timeOut) {
 		Utils.waitForElementPresence(element, locator, timeOut);
 	}
 
@@ -453,7 +452,7 @@ public class AppiumDriverFacade {
 	 * @param elements the elements
 	 * @param index the index
 	 */
-	public static void waitForElementVisibility(List<MobileElement> elements, int index) {
+	public static void waitForElementVisibility(List<WebElement> elements, int index) {
 		waitForElementVisibility(elements, index, pageTimeOut);
 	}
 
@@ -465,7 +464,7 @@ public class AppiumDriverFacade {
 	 * @param index the index
 	 * @param timeOut the time out
 	 */
-	public static void waitForElementVisibility(List<MobileElement> elements, int index, int timeOut) {
+	public static void waitForElementVisibility(List<WebElement> elements, int index, int timeOut) {
 		if (isAndroidExecution()) {
 			Utils.waitForElementVisibilityByIndex(appiumDriver.get(), elements, index, timeOut);
 		} else {
@@ -508,16 +507,14 @@ public class AppiumDriverFacade {
 			try {
 				return new FluentWait<WebDriver>(appiumDriver.get()).withTimeout(Duration.ofSeconds(timeOut))
 						.ignoring(RuntimeException.class).ignoring(IOException.class)
-						.until(new Function<WebDriver, Boolean>() {
-							public Boolean apply(WebDriver arg) {
-								ApplicationState state = AppiumDriverFacade.appiumDriver.get()
-										.queryAppState(FrameworkProperties.getPackage());
-								Log.logger.debug("state of the app is > '" + state.toString() + "'");
-								if (state != ApplicationState.RUNNING_IN_FOREGROUND) {
-									return false;
-								}
-								return true;
+						.until((Function<WebDriver, Boolean>) arg -> {
+							ApplicationState state = AppiumDriverFacade.appiumDriver.get()
+									.queryAppState(FrameworkProperties.getPackage());
+							Log.logger.debug("state of the app is > '" + state.toString() + "'");
+							if (state != ApplicationState.RUNNING_IN_FOREGROUND) {
+								return false;
 							}
+							return true;
 						});
 			} catch (TimeoutException e) {
 				return false;
@@ -538,7 +535,7 @@ public class AppiumDriverFacade {
 	 * @param locator   the locator
 	 * @return boolean
 	 */
-	public static boolean isElementVisible(MobileElement container, By locator) {
+	public static boolean isElementVisible(WebElement container, By locator) {
 		return isElementVisible(container, locator, pageTimeOut);
 	}
 
@@ -551,7 +548,7 @@ public class AppiumDriverFacade {
 	 * @param timeOut   the time out
 	 * @return boolean
 	 */
-	public static boolean isElementVisible(MobileElement element, By locator, int timeOut) {
+	public static boolean isElementVisible(WebElement element, By locator, int timeOut) {
 		return isAndroidExecution() ? Utils.isElementVisible(element, locator, timeOut)
 				: Utils.isAttributePresentOnElement(element, locator, "visible", "true", false, timeOut);
 	}
@@ -565,7 +562,7 @@ public class AppiumDriverFacade {
 	 * @param timeOut   the time out
 	 * @return boolean
 	 */
-	public static boolean isElementNotVisible(MobileElement container, By locator, int timeOut) {
+	public static boolean isElementNotVisible(WebElement container, By locator, int timeOut) {
 		return Utils.isElementNotVisible(container, locator, timeOut);
 	}
 
@@ -577,7 +574,7 @@ public class AppiumDriverFacade {
 	 * @param timeOut the time out
 	 * @return boolean
 	 */
-	public static boolean isElementVisible(MobileElement element, int timeOut) {
+	public static boolean isElementVisible(WebElement element, int timeOut) {
 		return isAndroidExecution() ? Utils.isElementVisible(appiumDriver.get(), element, timeOut)
 				: Utils.isAttributePresentOnElement(appiumDriver.get(), element, "visible", "true", false, timeOut);
 
@@ -590,7 +587,7 @@ public class AppiumDriverFacade {
 	 * @param element the element
 	 * @return boolean
 	 */
-	public static boolean isElementNotVisible(MobileElement element) {
+	public static boolean isElementNotVisible(WebElement element) {
 		return isElementNotVisible(element, pageTimeOut);
 	}
 
@@ -602,7 +599,7 @@ public class AppiumDriverFacade {
 	 * @param timeOut the time out
 	 * @return boolean
 	 */
-	public static boolean isElementNotVisible(MobileElement element, int timeOut) {
+	public static boolean isElementNotVisible(WebElement element, int timeOut) {
 		return isAndroidExecution() ? Utils.isElementNotVisible(appiumDriver.get(), element, timeOut)
 				: !Utils.isAttributePresentOnElement(appiumDriver.get(), element, "visible", "true", false, timeOut);
 	}
@@ -651,10 +648,10 @@ public class AppiumDriverFacade {
 	 * @param element the element
 	 * @return boolean
 	 */
-	public static boolean isElementVisible(MobileElement element) {
+	public static boolean isElementVisible(WebElement element) {
 		try {
 			return isAndroidExecution() ? element.isDisplayed() : isElementVisible(element, pageTimeOut);
-		} catch (StaleElementReferenceException | NoSuchElementException  | ElementNotVisibleException  e) {
+		} catch (StaleElementReferenceException | NoSuchElementException | ElementNotInteractableException e) {
 			return isElementVisible(element, pageTimeOut);
 		}
 	}
@@ -668,7 +665,7 @@ public class AppiumDriverFacade {
 	 * @param timeOut  the time out
 	 * @return boolean
 	 */
-	public static boolean isElementVisible(List<MobileElement> elements, int index, int timeOut) {
+	public static boolean isElementVisible(List<WebElement> elements, int index, int timeOut) {
 		TestUtils.assertListSize(elements, index);
 		return isAndroidExecution() ? Utils.isElementVisible(appiumDriver.get(), elements, index, timeOut) :
 				Utils.isAttributePresentOnElementByIndex(appiumDriver.get(), elements, index, "visible", "true", false, timeOut);
@@ -681,7 +678,7 @@ public class AppiumDriverFacade {
 	 * @param elements the elements
 	 * @return true, if successful
 	 */
-	public static boolean areElementsVisible(List<MobileElement> elements) {
+	public static boolean areElementsVisible(List<WebElement> elements) {
 		return areElementsVisible(elements, pageTimeOut);
 	}
 
@@ -692,7 +689,7 @@ public class AppiumDriverFacade {
 	 * @param timeOut the time out
 	 * @return true, if successful
 	 */
-	public static boolean areElementsVisible(List<MobileElement> elements, int timeOut) {
+	public static boolean areElementsVisible(List<WebElement> elements, int timeOut) {
 		return isAndroidExecution() ? Utils.areElementsVisible(appiumDriver.get(), elements, timeOut) :
 			Utils.isAttributePresentOnAllElements(appiumDriver.get(), elements, "visible", "true", false, timeOut);
 	}
@@ -705,7 +702,7 @@ public class AppiumDriverFacade {
 	 * @param index    the index
 	 * @return boolean
 	 */
-	public static boolean isElementVisible(List<MobileElement> elements, int index) {
+	public static boolean isElementVisible(List<WebElement> elements, int index) {
 		if(elements == null || elements.isEmpty()) {
 			Log.logger.debug("List of elements is null or empty");
 			return false;
@@ -722,12 +719,12 @@ public class AppiumDriverFacade {
 	 * @param text     the text
 	 * @return boolean
 	 */
-	public static boolean isElementVisible(List<MobileElement> elements, String text) {
+	public static boolean isElementVisible(List<WebElement> elements, String text) {
 		if(elements == null || elements.isEmpty()) {
 			Log.logger.debug("List of elements is empty is null or empty");
 			return false;
 		}
-		MobileElement element = getElementByText(elements, text);
+		WebElement element = getElementByText(elements, text);
 		return isElementVisible(element);
 	}
 
@@ -740,13 +737,12 @@ public class AppiumDriverFacade {
 	 *
 	 * @author carlos.cadena
 	 * @param locator the locator
-	 * @return A {@link MobileElement}
+	 * @return A {@link WebElement}
 	 */
-	public static MobileElement findVisibleElement(By locator) {
+	public static WebElement findVisibleElement(By locator) {
 		try {
 			return appiumDriver.get().findElement(locator);
-		}
-		catch(StaleElementReferenceException | NoSuchElementException | ElementNotVisibleException e) {
+		} catch (StaleElementReferenceException | NoSuchElementException | ElementNotInteractableException e) {
 			return findElement(locator, pageTimeOut, true);
 		}
 	}
@@ -760,7 +756,7 @@ public class AppiumDriverFacade {
 	 * @param timeout the timeout
 	 * @return the web element
 	 */
-	public static MobileElement findFirstVisibleElement(List<By> locators, int timeout) {
+	public static WebElement findFirstVisibleElement(List<By> locators, int timeout) {
 		Optional<By> result = locators.stream().filter(locator -> AppiumDriverFacade.isElementVisible(locator, timeout))
 				.findFirst();
 		if (result.isPresent()) {
@@ -780,7 +776,7 @@ public class AppiumDriverFacade {
 	 * @param timeout the timeout
 	 * @return the web element
 	 */
-	public static MobileElement findFirstVisibleElement(MobileElement container, List<By> locators, int timeout) {
+	public static WebElement findFirstVisibleElement(WebElement container, List<By> locators, int timeout) {
 		Optional<By> result = locators.stream().filter(locator -> AppiumDriverFacade.isElementVisible(container, locator, timeout))
 				.findFirst();
 		if (result.isPresent()) {
@@ -798,7 +794,7 @@ public class AppiumDriverFacade {
 	 * @param locators the locators
 	 * @return the web element
 	 */
-	public static MobileElement findFirstVisibleElement(List<By> locators) {
+	public static WebElement findFirstVisibleElement(List<By> locators) {
 		return findFirstVisibleElement(locators,pageTimeOut);
 	}
 	
@@ -810,7 +806,7 @@ public class AppiumDriverFacade {
 	 * @param locators the locators
 	 * @return the web element
 	 */
-	public static MobileElement findFirstVisibleElement(MobileElement container, List<By> locators) {
+	public static WebElement findFirstVisibleElement(WebElement container, List<By> locators) {
 		return findFirstVisibleElement(container, locators,pageTimeOut);
 	}
 
@@ -821,7 +817,7 @@ public class AppiumDriverFacade {
 	 * @param locators the locators
 	 * @return the web element
 	 */
-	public static MobileElement findFirstVisibleElement(By ... locators) {
+	public static WebElement findFirstVisibleElement(By... locators) {
 		return findFirstVisibleElement(Arrays.asList(locators));
 	}
 	
@@ -833,7 +829,7 @@ public class AppiumDriverFacade {
 	 * @param locators the locators
 	 * @return the web element
 	 */
-	public static MobileElement findFirstVisibleElement(int timeout, By ... locators) {
+	public static WebElement findFirstVisibleElement(int timeout, By... locators) {
 		return findFirstVisibleElement(Arrays.asList(locators), timeout);
 	}
 	
@@ -845,7 +841,7 @@ public class AppiumDriverFacade {
 	 * @param locators the locators
 	 * @return the web element
 	 */
-	public static MobileElement findFirstVisibleElement(MobileElement container, By ... locators) {
+	public static WebElement findFirstVisibleElement(WebElement container, By... locators) {
 		return findFirstVisibleElement(container, pageTimeOut, locators);
 	}
 	
@@ -858,7 +854,7 @@ public class AppiumDriverFacade {
 	 * @param locators the locators
 	 * @return the web element
 	 */
-	public static MobileElement findFirstVisibleElement(MobileElement container, int timeout, By ... locators) {
+	public static WebElement findFirstVisibleElement(WebElement container, int timeout, By... locators) {
 		return findFirstVisibleElement(container, Arrays.asList(locators), timeout);
 	}
 
@@ -867,9 +863,9 @@ public class AppiumDriverFacade {
 	 *
 	 * @author carlos.cadena
 	 * @param locator the locator
-	 * @return {@link MobileElement} a Mobile Element
+	 * @return {@link WebElement} a Mobile Element
 	 */
-	public static MobileElement findElement(By locator) {
+	public static WebElement findElement(By locator) {
 		try {
 			return appiumDriver.get().findElement(locator);
 		}
@@ -884,10 +880,10 @@ public class AppiumDriverFacade {
 	 *
 	 * @author carlos.cadena
 	 * @param locator the locator
-	 * @return A {@link List} of {@link MobileElement}
+	 * @return A {@link List} of {@link WebElement}
 	 */
-	public static List<MobileElement> findElements(By locator) {
-		List<MobileElement>  list = appiumDriver.get().findElements(locator);
+	public static List<WebElement> findElements(By locator) {
+		List<WebElement> list = appiumDriver.get().findElements(locator);
 		if (!list.isEmpty()){
 			return list;
 		}else{
@@ -901,11 +897,11 @@ public class AppiumDriverFacade {
 	 * @author carlos.cadena
 	 * @param locator the locator
 	 * @param visibility
-	 * 
-	 * @return A {@link List} of {@link MobileElement}
+	 *
+	 * @return A {@link List} of {@link WebElement}
 	 */
-	public static List<MobileElement> findElements(By locator, boolean visibility) {
-		List<MobileElement>  list = appiumDriver.get().findElements(locator);
+	public static List<WebElement> findElements(By locator, boolean visibility) {
+		List<WebElement> list = appiumDriver.get().findElements(locator);
 		if (!list.isEmpty()){
 			return !visibility ? list : list.stream().filter(x -> AppiumDriverFacade.isElementVisible(x,2)).collect(Collectors.toList());
 		}else{
@@ -920,10 +916,10 @@ public class AppiumDriverFacade {
 	 * @param locator    the locator
 	 * @param timeOut    the time out
 	 * @param visibility the visibility
-	 * @return {@link MobileElement} a Mobile Element
+	 * @return {@link WebElement} a Mobile Element
 	 */
-	private static MobileElement findElement(By locator, int timeOut, boolean visibility) {
-		return (MobileElement) Utils.findElement(appiumDriver.get(), locator, timeOut, visibility);
+	private static WebElement findElement(By locator, int timeOut, boolean visibility) {
+		return Utils.findElement(appiumDriver.get(), locator, timeOut, visibility);
 	}
 
 	/**
@@ -933,14 +929,14 @@ public class AppiumDriverFacade {
 	 * @param locator    the locator
 	 * @param timeOut    the time out
 	 * @param visibility the visibility
-	 * @return A {@link List} of {@link MobileElement}
+	 * @return A {@link List} of {@link WebElement}
 	 */
-	private static List<MobileElement> findElements(By locator, int timeOut, boolean visibility) {
-		List<MobileElement> mobileElements = new ArrayList<MobileElement>();
+	private static List<WebElement> findElements(By locator, int timeOut, boolean visibility) {
+		List<WebElement> WebElements = new ArrayList<WebElement>();
 		List<WebElement> elements = Utils.findElements(appiumDriver.get(), locator, pageTimeOut, visibility);
-		elements.forEach(element -> mobileElements.add(((MobileElement) element)));
-		if (!mobileElements.isEmpty()) {
-			return mobileElements;
+		elements.forEach(element -> WebElements.add(((WebElement) element)));
+		if (!WebElements.isEmpty()) {
+			return WebElements;
 		}else{
 			throw new NoSuchElementException(
 					String.format("The element was not present on the page"));
@@ -955,9 +951,9 @@ public class AppiumDriverFacade {
 	 * @param locator    the locator
 	 * @param visibility - if true visibility for locator will be evaluated, if
 	 *                   false not
-	 * @return {@link MobileElement} a Mobile Element
+	 * @return {@link WebElement} a Mobile Element
 	 */
-	public static MobileElement findElement(MobileElement container, By locator, boolean visibility) {
+	public static WebElement findElement(WebElement container, By locator, boolean visibility) {
 		return findElement(container, locator, pageTimeOut, visibility);
 
 	}
@@ -971,13 +967,13 @@ public class AppiumDriverFacade {
 	 * @param timeOut    the time out
 	 * @param visibility - if true visibility for locator will be evaluated, if
 	 *                   false not
-	 * @return {@link MobileElement} a Mobile Element
+	 * @return {@link WebElement} a Mobile Element
 	 */
-	public static MobileElement findElement(MobileElement container, By locator, int timeOut, boolean visibility) {
+	public static WebElement findElement(WebElement container, By locator, int timeOut, boolean visibility) {
 		if (visibility) {
 			try {
 				return container.findElement(locator);
-			} catch (StaleElementReferenceException | NoSuchElementException | ElementNotVisibleException e) {
+			} catch (StaleElementReferenceException | NoSuchElementException e) {
 				if (isAndroidExecution()) {
 					return Utils.findElement(container, locator, timeOut, true);
 				} else {
@@ -1011,13 +1007,13 @@ public class AppiumDriverFacade {
 	 * @param locator    the locator
 	 * @param visibility - if true visibility for locator will be evaluated, if
 	 *                   false not
-	 * @return A {@link List} of {@link MobileElement}
+	 * @return A {@link List} of {@link WebElement}
 	 */
-	public static List<MobileElement> findElements(MobileElement container, By locator, boolean visibility) {
+	public static List<WebElement> findElements(WebElement container, By locator, boolean visibility) {
 		if (visibility) {
 			try {
 				return container.findElements(locator);
-			} catch (StaleElementReferenceException | NoSuchElementException | ElementNotVisibleException e) {
+			} catch (StaleElementReferenceException | NoSuchElementException | ElementNotInteractableException e) {
 				return findElements(container, locator, pageTimeOut, true);
 			}
 		} else {
@@ -1038,14 +1034,14 @@ public class AppiumDriverFacade {
 	 * @param timeOut    the time out
 	 * @param visibility - if true visibility for locator will be evaluated, if
 	 *                   false not
-	 * @return A {@link List} of {@link MobileElement}
+	 * @return A {@link List} of {@link WebElement}
 	 */
-	private static List<MobileElement> findElements(MobileElement container, By locator, int timeOut,
+	private static List<WebElement> findElements(WebElement container, By locator, int timeOut,
 													boolean visibility) {
-		List<MobileElement> allMobile = new ArrayList<MobileElement>();
+		List<WebElement> allMobile = new ArrayList<WebElement>();
 		List<WebElement> elements = Utils.findElements(container, locator, timeOut, visibility);
 		for (WebElement e : elements) {
-			allMobile.add((MobileElement) e);
+			allMobile.add((WebElement) e);
 		}
 		return allMobile;
 	}
@@ -1061,10 +1057,10 @@ public class AppiumDriverFacade {
 	 * @param elements    the elements
 	 * @param elementText the element text
 	 * @param timeOut     the time out
-	 * @return {@link MobileElement} a Mobile Element
+	 * @return {@link WebElement} a Mobile Element
 	 */
-	public static MobileElement getElementByText(List<MobileElement> elements, String elementText, int timeOut) {
-		for (MobileElement element : elements) {
+	public static WebElement getElementByText(List<WebElement> elements, String elementText, int timeOut) {
+		for (WebElement element : elements) {
 			if (isElementVisible(element, timeOut)
 					&& element.getText().contains(elementText)) {
 				return element;
@@ -1080,9 +1076,9 @@ public class AppiumDriverFacade {
 	 * @author carlos.cadena
 	 * @param elements    the elements
 	 * @param elementText the element text
-	 * @return {@link MobileElement} a Mobile Element
+	 * @return {@link WebElement} a Mobile Element
 	 */
-	public static MobileElement getElementByText(List<MobileElement> elements, String elementText) {
+	public static WebElement getElementByText(List<WebElement> elements, String elementText) {
 		return getElementByText(elements, elementText, pageTimeOut);
 	}
 
@@ -1095,9 +1091,9 @@ public class AppiumDriverFacade {
 	 * @param timeOut     the time out
 	 * @return the element index
 	 */
-	public static int getElementIndex(List<MobileElement> elements, String elementText, int timeOut) {
+	public static int getElementIndex(List<WebElement> elements, String elementText, int timeOut) {
 		Utils.waitForAllElementsVisibility(appiumDriver.get(), elements, timeOut);
-		for (MobileElement element : elements) {
+		for (WebElement element : elements) {
 			if (isElementVisible(element, timeOut)
 					&& element.getText().contains(elementText)) {
 				return elements.indexOf(element);
@@ -1115,7 +1111,7 @@ public class AppiumDriverFacade {
 	 * @param elementText the element text
 	 * @return the element index
 	 */
-	public static int getElementIndex(List<MobileElement> elements, String elementText) {
+	public static int getElementIndex(List<WebElement> elements, String elementText) {
 		return getElementIndex(elements, elementText, pageTimeOut);
 	}
 
@@ -1127,10 +1123,10 @@ public class AppiumDriverFacade {
 	 * @param timeOut the time out
 	 * @return the text
 	 */
-	public static String getText(MobileElement element, int timeOut) {
+	public static String getText(WebElement element, int timeOut) {
 		try {
 			return element.getText();
-		} catch (StaleElementReferenceException | NoSuchElementException | ElementNotVisibleException e) {
+		} catch (StaleElementReferenceException | NoSuchElementException | ElementNotInteractableException e) {
 			Utils.waitForElementVisibility(appiumDriver.get(), element, timeOut);
 			return element.getText();
 		}
@@ -1143,7 +1139,7 @@ public class AppiumDriverFacade {
 	 * @param element the element
 	 * @return the text
 	 */
-	public static String getText(MobileElement element) {
+	public static String getText(WebElement element) {
 		return getText(element, pageTimeOut);
 	}
 
@@ -1156,7 +1152,7 @@ public class AppiumDriverFacade {
 	 * @param timeOut  the time out
 	 * @return the text
 	 */
-	public static String getText(List<MobileElement> elements, int index, int timeOut) {
+	public static String getText(List<WebElement> elements, int index, int timeOut) {
 		TestUtils.assertListSize(elements, index);
 		waitForElementVisibility(elements, index, timeOut);
 		return elements.get(index).getText();
@@ -1170,7 +1166,7 @@ public class AppiumDriverFacade {
 	 * @param index    the index
 	 * @return the text
 	 */
-	public static String getText(List<MobileElement> elements, int index) {
+	public static String getText(List<WebElement> elements, int index) {
 		return getText(elements, index, pageTimeOut);
 	}
 
@@ -1182,7 +1178,7 @@ public class AppiumDriverFacade {
 	 * @param locator the element locator
 	 * @return the text
 	 */
-	public static String getText(MobileElement container, By locator) {
+	public static String getText(WebElement container, By locator) {
 		return AppiumDriverFacade.findElement(container, locator, true).getText().trim();
 	}
 	
@@ -1194,10 +1190,10 @@ public class AppiumDriverFacade {
 	 * @param timeOut  the time out
 	 * @return A {@link List} of String
 	 */
-	public static List<String> getElementsText(List<MobileElement> elements, int timeOut) {
+	public static List<String> getElementsText(List<WebElement> elements, int timeOut) {
 		Utils.waitForAllElementsVisibility(appiumDriver.get(), elements);
 		List<String> Texts = new ArrayList<>();
-		for (MobileElement element : elements) {
+		for (WebElement element : elements) {
 			Texts.add(element.getText());
 		}
 		return Texts;
@@ -1210,7 +1206,7 @@ public class AppiumDriverFacade {
 	 * @param elements the elements
 	 * @return A {@link List} of String
 	 */
-	public static List<String> getElementsText(List<MobileElement> elements) {
+	public static List<String> getElementsText(List<WebElement> elements) {
 		return getElementsText(elements, pageTimeOut);
 	}
 
@@ -1223,7 +1219,7 @@ public class AppiumDriverFacade {
 	 * @param axis    the axis (Options must be 'X' or 'Y' with lower or upper case)
 	 * @return the element axis
 	 */
-	public static int getElementByAxis(MobileElement element, String axis) {
+	public static int getElementByAxis(WebElement element, String axis) {
 		switch (axis.toUpperCase()) {
 		case "Y":
 			return element.getLocation().y;
@@ -1241,7 +1237,7 @@ public class AppiumDriverFacade {
 	 * @param elements the elements
 	 * @return the elements count
 	 */
-	public static int getElementsCount(List<MobileElement> elements) {
+	public static int getElementsCount(List<WebElement> elements) {
 		return elements.size();
 	}
 
@@ -1254,10 +1250,10 @@ public class AppiumDriverFacade {
 	 * @param timeOut     the time out
 	 * @return the elements count
 	 */
-	public static int getElementsCount(List<MobileElement> elements, String elementText, int timeOut) {
+	public static int getElementsCount(List<WebElement> elements, String elementText, int timeOut) {
 		Utils.waitForAllElementsVisibility(appiumDriver.get(), elements);
-		List<MobileElement> selectedElements = new ArrayList<>();
-		for (MobileElement e : elements) {
+		List<WebElement> selectedElements = new ArrayList<>();
+		for (WebElement e : elements) {
 			if (e.getText().equals(elementText))
 				selectedElements.add(e);
 		}
@@ -1272,7 +1268,7 @@ public class AppiumDriverFacade {
 	 * @param elementText the element text
 	 * @return the elements count
 	 */
-	public static int getElementsCount(List<MobileElement> elements, String elementText) {
+	public static int getElementsCount(List<WebElement> elements, String elementText) {
 		return getElementsCount(elements, elementText, pageTimeOut);
 	}
 
@@ -1283,7 +1279,7 @@ public class AppiumDriverFacade {
 	 * @param element the element
 	 * @return the {@link Dimension} element size
 	 */
-	public static Dimension getElementSize(MobileElement element) {
+	public static Dimension getElementSize(WebElement element) {
 		return element.getSize();
 	}
 
@@ -1294,7 +1290,7 @@ public class AppiumDriverFacade {
 	 * @param element the element
 	 * @return the {@link Point} indicating element center
 	 */
-	public static Point getElementCenterPoint(MobileElement element) {
+	public static Point getElementCenterPoint(WebElement element) {
 		return element.getCenter();
 	}
 	
@@ -1305,7 +1301,7 @@ public class AppiumDriverFacade {
 	 * @param element the element
 	 * @return the {@link Point} indicating element center
 	 */
-	public static Point getElementLocation(MobileElement element) {
+	public static Point getElementLocation(WebElement element) {
 		return element.getLocation();
 	}
 
@@ -1321,7 +1317,7 @@ public class AppiumDriverFacade {
 	 * @param text    the text
 	 * @param timeOut the time out
 	 */
-	public static void write(MobileElement element, String text, int timeOut) {
+	public static void write(WebElement element, String text, int timeOut) {
 		try {
 			element.sendKeys(text);
 		} catch (StaleElementReferenceException | NoSuchElementException | InvalidElementStateException e) {
@@ -1337,7 +1333,7 @@ public class AppiumDriverFacade {
 	 * @param element the element
 	 * @param text    the text
 	 */
-	public static void write(MobileElement element, String text) {
+	public static void write(WebElement element, String text) {
 		write(element, text, pageTimeOut);
 	}
 
@@ -1350,7 +1346,7 @@ public class AppiumDriverFacade {
 	 * @param text     the text
 	 * @param timeout  the timeout
 	 */
-	public static void write(List<MobileElement> elements, int index, String text, int timeout) {
+	public static void write(List<WebElement> elements, int index, String text, int timeout) {
 		TestUtils.assertListSize(elements, index);
 		write(elements.get(index), text, timeout);
 	}
@@ -1363,7 +1359,7 @@ public class AppiumDriverFacade {
 	 * @param index    the index
 	 * @param text     the text
 	 */
-	public static void write(List<MobileElement> elements, int index, String text) {
+	public static void write(List<WebElement> elements, int index, String text) {
 		write(elements, index, text, pageTimeOut);
 	}
 
@@ -1374,10 +1370,10 @@ public class AppiumDriverFacade {
 	 * @param element the element
 	 * @param timeOut the time out
 	 */
-	public static void clean(MobileElement element, int timeOut) {
+	public static void clean(WebElement element, int timeOut) {
 		try {
 			element.clear();
-		} catch (StaleElementReferenceException | NoSuchElementException | ElementNotVisibleException e) {
+		} catch (StaleElementReferenceException | NoSuchElementException | ElementNotInteractableException e) {
 			Utils.waitForElementVisibility(appiumDriver.get(), element, timeOut);
 			element.clear();
 		}
@@ -1389,7 +1385,7 @@ public class AppiumDriverFacade {
 	 * @author carlos.cadena
 	 * @param element the element
 	 */
-	public static void clean(MobileElement element) {
+	public static void clean(WebElement element) {
 		clean(element, pageTimeOut);
 	}
 
@@ -1400,7 +1396,7 @@ public class AppiumDriverFacade {
 	 * @param elements the elements
 	 * @param index    the index
 	 */
-	public static void clean(List<MobileElement> elements, int index) {
+	public static void clean(List<WebElement> elements, int index) {
 		TestUtils.assertListSize(elements, index);
 		clean(elements.get(index));
 	}
@@ -1412,7 +1408,7 @@ public class AppiumDriverFacade {
 	 * @param element the element
 	 * @param text    the text
 	 */
-	public static void cleanAndWrite(MobileElement element, String text) {
+	public static void cleanAndWrite(WebElement element, String text) {
 		clean(element);
 		write(element, text);
 	}
@@ -1426,7 +1422,7 @@ public class AppiumDriverFacade {
 	 * @param text          the text
 	 * @param secondsToWait the seconds to wait
 	 */
-	public static void cleanAndWrite(List<MobileElement> elements, int index, String text, int secondsToWait) {
+	public static void cleanAndWrite(List<WebElement> elements, int index, String text, int secondsToWait) {
 		TestUtils.assertListSize(elements, index);
 		clean(elements.get(index), secondsToWait);
 		write(elements.get(index), text);
@@ -1439,10 +1435,10 @@ public class AppiumDriverFacade {
 	 * @param element the element
 	 * @param timeOut the time out
 	 */
-	public static void tap(MobileElement element, int timeOut) {
+	public static void tap(WebElement element, int timeOut) {
 		try {
 			element.click();
-		} catch (StaleElementReferenceException | NoSuchElementException | ElementNotVisibleException e) {
+		} catch (StaleElementReferenceException | NoSuchElementException e) {
 			Utils.waitForElementVisibility(appiumDriver.get(), element, timeOut);
 			element.click();
 		}
@@ -1454,7 +1450,7 @@ public class AppiumDriverFacade {
 	 * @author carlos.cadena
 	 * @param element the element
 	 */
-	public static void tap(MobileElement element) {
+	public static void tap(WebElement element) {
 		tap(element, pageTimeOut);
 	}
 	
@@ -1466,14 +1462,14 @@ public class AppiumDriverFacade {
 	 * @param millisecondsBetweenTaps the milliseconds between taps
 	 * @param timeOut the time out
 	 */
-	public static void doubleTap(MobileElement element, int millisecondsBetweenTaps, int timeOut) {
+	public static void doubleTap(WebElement element, int millisecondsBetweenTaps, int timeOut) {
 		TouchAction action = new TouchAction<>(appiumDriver.get());
 		TapOptions options = TapOptions.tapOptions().withPosition(PointOption.point(AppiumDriverFacade.getElementCenterPoint(element)));
 		action = new TouchAction<>(appiumDriver.get()).waitAction(WaitOptions.waitOptions(Duration.ofMillis(millisecondsBetweenTaps))).tap(options).tap(options);
 
 		try {
 			action.perform();
-		} catch (StaleElementReferenceException | NoSuchElementException | ElementNotVisibleException e) {
+		} catch (StaleElementReferenceException | NoSuchElementException | ElementNotInteractableException e) {
 			Utils.waitForElementVisibility(appiumDriver.get(), element, timeOut);
 			action.perform();
 		}
@@ -1486,7 +1482,7 @@ public class AppiumDriverFacade {
 	 * @param element the element
 	 * @param millisecondsBetweenTaps the milliseconds between taps
 	 */
-	public static void doubleTap(MobileElement element, int millisecondsBetweenTaps) {
+	public static void doubleTap(WebElement element, int millisecondsBetweenTaps) {
 		doubleTap(element, millisecondsBetweenTaps, pageTimeOut);
 	}
 	
@@ -1496,7 +1492,7 @@ public class AppiumDriverFacade {
 	 * @author carlos.cadena
 	 * @param element the element
 	 */
-	public static void tapOnCenterOfElement(MobileElement element) {
+	public static void tapOnCenterOfElement(WebElement element) {
 		Point center = element.getCenter();
 		new TouchAction<>(appiumDriver.get()).tap(PointOption.point(center.getX(), center.getY()));
 	}
@@ -1507,7 +1503,7 @@ public class AppiumDriverFacade {
 	 * @author carlos.cadena
 	 * @param element the element
 	 */
-	public static void tapOnCornerOfElement(MobileElement element) {
+	public static void tapOnCornerOfElement(WebElement element) {
 		Point corner = element.getLocation();
 		new TouchAction<>(appiumDriver.get()).tap(PointOption.point(corner.getX(), corner.getY()));
 	}
@@ -1531,7 +1527,7 @@ public class AppiumDriverFacade {
 	 * @param index    the index
 	 * @param timeOut  the time out
 	 */
-	public static void tap(List<MobileElement> elements, int index, int timeOut) {
+	public static void tap(List<WebElement> elements, int index, int timeOut) {
 		TestUtils.assertListSize(elements, index);
 		Utils.waitForAllElementsVisibility(appiumDriver.get(), elements);
 		tap(elements.get(index));
@@ -1544,7 +1540,7 @@ public class AppiumDriverFacade {
 	 * @param elements the elements
 	 * @param index    the index
 	 */
-	public static void tap(List<MobileElement> elements, int index) {
+	public static void tap(List<WebElement> elements, int index) {
 		tap(elements, index, pageTimeOut);
 	}
 
@@ -1555,8 +1551,8 @@ public class AppiumDriverFacade {
 	 * @param elements    the elements
 	 * @param elementText the element text
 	 */
-	public static void tap(List<MobileElement> elements, String elementText) {
-		MobileElement element = getElementByText(elements, elementText, 5);
+	public static void tap(List<WebElement> elements, String elementText) {
+		WebElement element = getElementByText(elements, elementText, 5);
 		tap(element);
 	}
 
@@ -1567,7 +1563,7 @@ public class AppiumDriverFacade {
 	 * @param container the container
 	 * @param locator the element locator
 	 */
-	public static void tap(MobileElement container, By locator) {
+	public static void tap(WebElement container, By locator) {
 		AppiumDriverFacade.findElement(container, locator, pageTimeOut, true).click();
 	}
 
@@ -1579,8 +1575,8 @@ public class AppiumDriverFacade {
 	 * @param locator the element locator
 	 * @param text the text
 	 */
-	public static void tap(MobileElement container, By locator, String text) {
-		List<MobileElement> elements = AppiumDriverFacade.findElements(container, locator, pageTimeOut , true);
+	public static void tap(WebElement container, By locator, String text) {
+		List<WebElement> elements = AppiumDriverFacade.findElements(container, locator, pageTimeOut, true);
 		AppiumDriverFacade.tap(elements, text);
 	}
 
@@ -1641,7 +1637,7 @@ public class AppiumDriverFacade {
 	 * @param locator the locator
 	 * @return true, if is element present
 	 */
-	public static boolean isElementPresent(MobileElement container, By locator) {
+	public static boolean isElementPresent(WebElement container, By locator) {
 		return Utils.isElementPresent(container, locator, pageTimeOut);
 	}
 
@@ -1654,7 +1650,7 @@ public class AppiumDriverFacade {
 	 * @param timeout the timeout
 	 * @return true, if is element present
 	 */
-	public static boolean isElementPresent(MobileElement container, By locator, int timeout) {
+	public static boolean isElementPresent(WebElement container, By locator, int timeout) {
 		return Utils.isElementPresent(container, locator, timeout);
 	}
 
@@ -1678,7 +1674,7 @@ public class AppiumDriverFacade {
 	 * @param timeout the timeout
 	 * @return true, if is element enabled
 	 */
-	public static boolean isElementEnabled(MobileElement element, int timeout) {
+	public static boolean isElementEnabled(WebElement element, int timeout) {
 		return Utils.isElementEnabled(appiumDriver.get(), element, timeout);
 	}
 	
@@ -1689,10 +1685,11 @@ public class AppiumDriverFacade {
 	 * @param element the element
 	 * @return true, if is element enabled
 	 */
-	public static boolean isElementEnabled(MobileElement element) {
+	public static boolean isElementEnabled(WebElement element) {
 		try {
 			return element.isEnabled();
-		} catch (StaleElementReferenceException | NoSuchElementException | ElementNotSelectableException | ElementNotVisibleException e) {
+		} catch (StaleElementReferenceException | NoSuchElementException | ElementNotInteractableException |
+				 ElementNotInteractableException e) {
 			return isElementEnabled(element, pageTimeOut);
 		}
 	}
@@ -1706,7 +1703,7 @@ public class AppiumDriverFacade {
 	 * @param timeout  the timeout
 	 * @return boolean
 	 */
-	public static boolean isElementEnabled(List<MobileElement> elements, int index, int timeout) {
+	public static boolean isElementEnabled(List<WebElement> elements, int index, int timeout) {
 		return Utils.isElementEnabled(appiumDriver.get(), elements, index, timeout);
 	}
 
@@ -1718,7 +1715,7 @@ public class AppiumDriverFacade {
 	 * @param index    the index
 	 * @return boolean
 	 */
-	public static boolean isElementEnabled(List<MobileElement> elements, int index) {
+	public static boolean isElementEnabled(List<WebElement> elements, int index) {
 		return isElementEnabled(elements, index, pageTimeOut);
 	}
 
@@ -1731,8 +1728,8 @@ public class AppiumDriverFacade {
 	 * @param timeout     the timeout
 	 * @return boolean
 	 */
-	public static boolean isElementEnabledByText(List<MobileElement> elements, String elementText, int timeout) {
-		MobileElement element = getElementByText(elements, elementText);
+	public static boolean isElementEnabledByText(List<WebElement> elements, String elementText, int timeout) {
+		WebElement element = getElementByText(elements, elementText);
 		return isElementEnabled(element, timeout);
 	}
 
@@ -1744,7 +1741,7 @@ public class AppiumDriverFacade {
 	 * @param elementText the element text
 	 * @return boolean
 	 */
-	public static boolean isElementEnabledByText(List<MobileElement> elements, String elementText) {
+	public static boolean isElementEnabledByText(List<WebElement> elements, String elementText) {
 		return isElementEnabledByText(elements, elementText, pageTimeOut);
 	}
 
@@ -1757,7 +1754,7 @@ public class AppiumDriverFacade {
 	 * @param timeout the timeout
 	 * @return true, if is element enabled no wait
 	 */
-	public static boolean isElementEnabled(List<MobileElement> elements, String elementText, int timeout) {
+	public static boolean isElementEnabled(List<WebElement> elements, String elementText, int timeout) {
 		try {
 			if(elements == null || elements.isEmpty()) {
 				Log.logger.debug("List of elements is empty is null or empty");
@@ -1777,7 +1774,7 @@ public class AppiumDriverFacade {
 	 * @param element the element
 	 * @return boolean
 	 */
-	public static boolean isElementVisibleNoWait(MobileElement element) {
+	public static boolean isElementVisibleNoWait(WebElement element) {
 			return Utils.isElementVisible(appiumDriver.get(), element, 1);
 	}
 
@@ -1789,7 +1786,7 @@ public class AppiumDriverFacade {
 	 * @param index    the index
 	 * @return true, if is element visible no wait
 	 */
-	public static boolean isElementVisibleNoWait(List<MobileElement> elements, int index) {
+	public static boolean isElementVisibleNoWait(List<WebElement> elements, int index) {
 		try {
 			return elements.get(index).isDisplayed();
 		} catch (NoSuchElementException | IllegalArgumentException | StaleElementReferenceException
@@ -1807,7 +1804,7 @@ public class AppiumDriverFacade {
 	 * @param timeOut the timeout
 	 * @return true, if is element visible no wait
 	 */
-	public static boolean isElementVisible(List<MobileElement> elements, String elementText, int timeOut) {
+	public static boolean isElementVisible(List<WebElement> elements, String elementText, int timeOut) {
 		try {
 			if(elements == null || elements.isEmpty()) {
 				Log.logger.debug("List of elements is empty is null or empty");
@@ -1919,7 +1916,7 @@ public class AppiumDriverFacade {
 	}
 	
 	/**
-	 * Terminate caixa application.
+	 * Terminate application.
 	 *
 	 * @author carlos.cadena
 	 */
@@ -1942,7 +1939,8 @@ public class AppiumDriverFacade {
 	 * @param duration the duration
 	 */
 	public static void swipe(Integer xStart, Integer yStart, Integer xEnd, Integer yEnd, long duration) {
-		new TouchAction<>(appiumDriver.get()).press(PointOption.point(xStart, yStart))
+		new TouchAction<>(isAndroidExecution() ? (AndroidDriver) appiumDriver.get() : (IOSDriver) appiumDriver.get())
+				.press(PointOption.point(xStart, yStart))
 				.waitAction(WaitOptions.waitOptions(Duration.ofMillis(duration))).moveTo(PointOption.point(xEnd, yEnd))
 				.release().perform();
 	}
@@ -1957,7 +1955,7 @@ public class AppiumDriverFacade {
 	 * @return true, if successful
 	 * @throws IllegalArgumentException the illegal argument exception
 	 */
-	public static boolean vSwipeToElement(MobileElement element, MovementsV movement, int maxSwipes)
+	public static boolean vSwipeToElement(WebElement element, MovementsV movement, int maxSwipes)
 			throws IllegalArgumentException {
 		Tuple<Point,Point> startAndEnd = getStartAndEndPositionForVerticalSwipe(movement);
 		for (int i = 0; i < maxSwipes; i++) {
@@ -2005,7 +2003,7 @@ public class AppiumDriverFacade {
 	 * @param maxSwipes the max swipes
 	 * @throws IllegalArgumentException the illegal argument exception
 	 */
-	public static void vSwipeToElement(MobileElement container, By locator, MovementsV movement, int maxSwipes)
+	public static void vSwipeToElement(WebElement container, By locator, MovementsV movement, int maxSwipes)
 			throws IllegalArgumentException {
 		vSwipeToElement(container.findElement(locator), movement, maxSwipes);
 	}
@@ -2016,7 +2014,7 @@ public class AppiumDriverFacade {
 	 * @author carlos.cadena
 	 * @param element the element
 	 */
-	public static void centerElementOnScreen(MobileElement element) {
+	public static void centerElementOnScreen(WebElement element) {
 		Dimension deviceScreen = getScreenSize();
 		Point center = AppiumDriverFacade.getElementCenterPoint(element);
 		int deviceScreenY = deviceScreen.height <= 667 ? deviceScreen.height - 70 : deviceScreen.height - 10;
@@ -2036,7 +2034,7 @@ public class AppiumDriverFacade {
 	 * @author carlos.cadena
 	 * @param element the element
 	 */
-	public static void centerElementOnScreenRespectToX(MobileElement element) {
+	public static void centerElementOnScreenRespectToX(WebElement element) {
 		Dimension deviceScreen = getScreenSize();
 		Point center = AppiumDriverFacade.getElementCenterPoint(element);
 		Point location = AppiumDriverFacade.getElementLocation(element);
@@ -2077,7 +2075,7 @@ public class AppiumDriverFacade {
 	 * @param movement the movement
 	 * @return the start and end position for horizontal swipe
 	 */
-	private static Tuple<Point,Point> getStartAndEndPositionForHorizontalSwipe(MobileElement startElement,  MovementsH movement){
+	private static Tuple<Point, Point> getStartAndEndPositionForHorizontalSwipe(WebElement startElement, MovementsH movement) {
 		int xStart, yStartAndEnd, xEnd;
 		Dimension deviceScreen = getScreenSize();
 		Point elementLocator = AppiumDriverFacade.getElementLocation(startElement);
@@ -2104,7 +2102,7 @@ public class AppiumDriverFacade {
 	 * @param movement      the movement
 	 * @param maxSwipes the max swipes
 	 */
-	public static void hSwipeFromElement(MobileElement startElement, MovementsH movement, int maxSwipes) {
+	public static void hSwipeFromElement(WebElement startElement, MovementsH movement, int maxSwipes) {
 		Tuple<Point,Point> startAndEnd = getStartAndEndPositionForHorizontalSwipe(startElement, movement);
 		for (int i = 0; i < maxSwipes; i++) {
 			swipe(startAndEnd.v1().x, startAndEnd.v1().y, startAndEnd.v2().x, startAndEnd.v2().y, 1000);
@@ -2119,7 +2117,7 @@ public class AppiumDriverFacade {
 	 * @param movement      the movement
 	 * @param maxSwipes     the max swipes
 	 */
-	public static void hFullSwipeFromElement(MobileElement startElement, MovementsH movement, int maxSwipes) {
+	public static void hFullSwipeFromElement(WebElement startElement, MovementsH movement, int maxSwipes) {
 		Tuple<Point,Point> startAndEnd = getStartAndEndPositionForHorizontalSwipe(startElement, movement);
 		Dimension deviceScreen = getScreenSize();
 		int xEnd = 0;
@@ -2146,7 +2144,7 @@ public class AppiumDriverFacade {
 	 * @param maxSwipes     the max swipes
 	 * @param duration      the duration
 	 */
-	public static void hSwipeFromElement(MobileElement startElement, MovementsH movement, int maxSwipes, long duration) {
+	public static void hSwipeFromElement(WebElement startElement, MovementsH movement, int maxSwipes, long duration) {
 		Tuple<Point,Point> startAndEnd = getStartAndEndPositionForHorizontalSwipe(startElement, movement);
 		for (int i = 0; i < maxSwipes; i++) {
 			swipe(startAndEnd.v1().x, startAndEnd.v1().y, startAndEnd.v2().x, startAndEnd.v2().y, duration);
@@ -2163,8 +2161,8 @@ public class AppiumDriverFacade {
 	 * @param wantedElement the wanted element
 	 * @return true, if successful
 	 */
-	public static boolean hSwipeToElement(MobileElement startElement, MovementsH movement, int maxSwipes,
-										MobileElement wantedElement) {
+	public static boolean hSwipeToElement(WebElement startElement, MovementsH movement, int maxSwipes,
+										  WebElement wantedElement) {
 		Tuple<Point,Point> startAndEnd = getStartAndEndPositionForHorizontalSwipe(startElement, movement);
 		for (int i = 0; i < maxSwipes; i++) {
 			if(!AppiumDriverFacade.isElementVisibleNoWait(wantedElement)){
@@ -2188,7 +2186,7 @@ public class AppiumDriverFacade {
 	 * @param wantedElement the wanted element
 	 * @return true, if successful
 	 */
-	public static boolean hSwipeToElement(MobileElement startElement, MovementsH movement, int maxSwipes,
+	public static boolean hSwipeToElement(WebElement startElement, MovementsH movement, int maxSwipes,
 										By wantedElement) {
 		Tuple<Point,Point> startAndEnd = getStartAndEndPositionForHorizontalSwipe(startElement, movement);
 		for (int i = 0; i < maxSwipes; i++) {
@@ -2210,7 +2208,7 @@ public class AppiumDriverFacade {
 	 * @param movement the movement
 	 * @return true, if successful
 	 */
-	public static boolean scrollToElementIOSScript(MobileElement element, MovementsV movement) {
+	public static boolean scrollToElementIOSScript(WebElement element, MovementsV movement) {
 		JavascriptExecutor js = (JavascriptExecutor) appiumDriver.get();
 		HashMap<String, String> scrollObject = new HashMap<String, String>();
 		scrollObject.put("direction", movement == MovementsV.DOWN ? "down" : "up");
